<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.users.UsersFragment">

    <Button
        android:id="@+id/get_profiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/get_profiles_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/count_input"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/count_input"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/_1"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:maxLength="5"
        android:text="@string/_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/get_profiles"
        app:layout_constraintEnd_toStartOf="@+id/history"
        app:layout_constraintStart_toEndOf="@+id/get_profiles"
        app:layout_constraintTop_toTopOf="@+id/get_profiles" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/count_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/users_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/history"
        android:src="@drawable/ic_baseline_history_24"
        app:layout_constraintBottom_toBottomOf="@+id/count_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/count_input"
        app:layout_constraintTop_toTopOf="@+id/count_input"
        app:tint="#707070" />

</androidx.constraintlayout.widget.ConstraintLayout>